# the-gully

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
agents/: config.py
agents/app/: main.py
db/: populate.py
db/sql/: setup_db.sql
db/sql/entities/: all_cities.sql  all_players.sql  all_teams.sql  all_umpires.sql  all_venues.sql
tagging/: entity_fetcher.py
utils/: clean_list_string.py
